# churn_prediction

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  app.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  train_model.py
.github/workflows/: tests.yaml
churn_prediction/: __init__.py  dataset.py  model.py  pipelines.ipynb  visualize.py
churn_prediction/data/: cleaning.py  dataset.py
churn_prediction/utils/: logging.py  visualize.py
configs/: config.yaml
deploy_k8s/: churn-prediction-deployment.yaml
dockerfiles/: predict_model.dockerfile  train_model.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
tests/: __init__.py  locustfile.py  test_api.py  test_data.py
